--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
         $ ->
             myRoomId = null
-            socket = io.connect "http://localhost:8181"
+            socket = io.connect()
 
             #
             # Initialize Editors
