Fix "save code" saves other user written code overrides self code.

--- a/static/index.html
+++ b/static/index.html
@@ -116,6 +116,8 @@
             #
             # Editor button events
             $("#coffee-save").on "click", ->
+                return if inputEditor.currentRoomId isnt myRoomId
+                
                 localStorage.setItem "code", inputEditor.getValue()
 
                 compileToShow inputEditor, exportEditor
